bk_ida/gobmkida/c2/pattern_2_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1569:25: error: unknown type name 'pattern_0'
void  pattern_2_string( pattern_0 *pat, struct patval_b *elements, char *str, int trans, int ci, int cj) 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1572:1: error: use of undeclared identifier 'pattern_0'
pattern_0 *v7; // rbx 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1572:12: error: use of undeclared identifier 'v7'
pattern_0 *v7; // rbx 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1608:1: error: use of undeclared identifier 'pattern_0'
pattern_0 *v43; // rdi 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1608:12: error: use of undeclared identifier 'v43'
pattern_0 *v43; // rdi 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1647:1: error: use of undeclared identifier 'pattern_0'
pattern_0 *v82; // [rsp+8h] [rbp-1C30h] 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1647:12: error: use of undeclared identifier 'v82'
pattern_0 *v82; // [rsp+8h] [rbp-1C30h] 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1674:1: error: use of undeclared identifier 'v7'
v7 = pat; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1696:1: error: use of undeclared identifier 'v82'
v82 = pat; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1738:1: error: use of undeclared identifier 'v7'
v7 = v82; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1738:6: error: use of undeclared identifier 'v82'
v7 = v82; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1740:20: error: use of undeclared identifier 'v7'
edge_constraints = v7->edge_constraints; 
                   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1779:7: error: use of undeclared identifier 'v82'
v32 = v82->maxj; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1802:7: error: use of undeclared identifier 'v82'
v37 = v82->minj; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1810:22: error: use of undeclared identifier 'v82'
v83 = ( unsigned int)v82->minj; 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1849:7: error: use of undeclared identifier 'v82'
v56 = v82->minj; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1897:1: error: use of undeclared identifier 'v43'
v43 = v82; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1897:7: error: use of undeclared identifier 'v82'
v43 = v82; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1898:25: error: use of undeclared identifier 'v82'
patlen = ( unsigned int)v82->patlen; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1937:1: error: use of undeclared identifier 'v43'
v43 = v82; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1937:7: error: use of undeclared identifier 'v82'
v43 = v82; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1938:22: error: use of undeclared identifier 'v82'
v81 = ( unsigned int)v82->patlen; 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1940:17: error: use of undeclared identifier 'v43'
LODWORD( v83) = v43->edge_constraints; 
                ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1954:13: error: use of undeclared identifier 'v43'
if ( v69 != v43->maxi ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1957:13: error: use of undeclared identifier 'v43'
if ( v69 != v43->mini ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1960:13: error: use of undeclared identifier 'v43'
if ( v68 != v43->maxj ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1963:13: error: use of undeclared identifier 'v43'
if ( v68 != v43->minj ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1985:1: error: use of undeclared identifier 'v43'
v43 = v82; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1985:7: error: use of undeclared identifier 'v82'
v43 = v82; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1986:13: error: use of undeclared identifier 'v82'
if ( v69 <= v82->maxi ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1989:13: error: use of undeclared identifier 'v82'
if ( v69 >= v82->mini ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1992:13: error: use of undeclared identifier 'v82'
if ( v68 <= v82->maxj ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:1995:13: error: use of undeclared identifier 'v82'
if ( v68 >= v82->minj ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:2001:1: error: use of undeclared identifier 'v43'
v43 = v82; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/patterns/dfa.c:2001:7: error: use of undeclared identifier 'v82'
v43 = v82; 
      ^
35 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/pattern_2_string/src/obj/3/dfa.o] Error 1
